# newapi

./: .gitignore  CLAUDE.md  Diagram.md  LICENSE  MANIFEST.in  PROJECT_AUDIT_REPORT.md  README.md  README1.md  __init__.py  botEdit.py  except_err.py  mdwiki_page.py  ncc_page.py  page.py  pyproject.toml  pytest.ini  refactor.md  requirements-dev.txt  requirements.in  toolforge_page.py  tree.md  tree.py  tt.py  useraccount.py  wiki_page.py
DB_bots/: db_bot.py  pymysql_bot.py
Doc/: MainPage.md
_work_files/: scan.py  tree.py  z.py
accounts/: user_account_new.py
api_utils/: botEdit.py  except_err.py  lang_codes.py  printe.py  txtlib.py  user_agent.py  wd_sparql.py
docs/: CatDepth.md  MainPage.md  NEW_API.md
newapi/: README.md  __init__.py  all_apis.py  config.py  except_err.py  logging_config.py  mdwiki_page.py  ncc_page.py  new_wiki_pages.py  page.py  pformat.py  printe.py  toolforge_page.py  tt.py  wiki_page.py
pages_bots/: __init__.py  mdwiki_page.py  ncc_page.py  page.py  toolforge_page.py  wiki_page.py
super/: __init__.py  bot_api.py  catdepth_new.py  handel_errors.py  super_login.py  super_page.py
tests/: README.md  TestALL_APIS.py  TestAuthentication.py  TestLiteDB.py  TestMainPage.py  TestNewAPI.py  TestSettings.py  __init__.py  conftest.py  pytest.ini  test_bot_api.py  test_bot_edit.py  test_catdepth.py  test_catdepth1.py  test_db_bot.py  test_langs.py  test_login.py  test_login1.py  test_mdwiki_page.py  test_ncc_page.py  test_page.py  test_toolforge_page.py  test_wiki_page.py  ‏‏test_bot_edit.py
x_tests/: nc_files.db  test_bot_api.py  test_page.py  (+11 more)
(+142 files in other folders)
